mobile alignment issue

--- a/src/sass/app/trade.scss
+++ b/src/sass/app/trade.scss
@@ -518,7 +518,6 @@
                 display: flex;
                 flex-direction: column;
                 line-height: 1.4em;
-                padding: 0 10px;
             }
         }
         #contract_purchase_spots {
@@ -539,6 +538,7 @@
         }
         #contract_purchase_payout {
             border-right: 1px solid $COLOR_GRAY;
+            padding: unset;
         }
         #contract_purchase_profit {
             border-left: 1px solid $COLOR_GRAY;
